<resources>
    <string name="app_name">College Scheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">College Scheduler</string>
    <string name="nav_header_subtitle">A Scheduler App for College Students</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_classes">Classes</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_exams">Exams</string>
    <string name="classes">Classes</string>
    <string name="menu_todo">To-Do</string>
    <string name="class_name_and_section">Class Section</string>
    <string name="date_range">Date Range</string>
    <string name="time">Time</string>
    <string name="days_repeated">Days Repeated</string>
    <string name="location">Location</string>
    <string name="instructor">Instructor</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="due_date">Due Date</string>
    <string name="associated_class">Associated Class</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="add">Add</string>
    <string name="sort_by">Sort By:</string>
    <string name="add_task">Add Task</string>
    <string name="course">Course</string>
    <string name="task_name">Task Name</string>
    <string name="status">Status</string>


</resources>