<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        tools:context=".ui.todo.TodoFragment">

        <TextView
            android:id="@+id/textViewT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_todo"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/listViewT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewT" />

        <EditText
            android:id="@+id/editTextDateT"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/due_date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCourseT" />

        <EditText
            android:id="@+id/editTextTaskT"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/task_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listViewT"
            />

        <EditText
            android:id="@+id/editTextCourseT"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTaskT"/>

        <Button
            android:id="@+id/buttonAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDateT" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_by"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSortByCourse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddTask"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonSortByDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            app:layout_constraintEnd_toStartOf="@+id/buttonSortByCourse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/buttonSortByCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course"
            app:layout_constraintEnd_toStartOf="@+id/buttonSortByStatus"
            app:layout_constraintStart_toEndOf="@+id/buttonSortByDate"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/buttonSortByStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonSortByCourse"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>